balloons2025 for phone in landscape mode is corrected

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         @media (orientation: landscape) and (max-height: 400px) {
             .balloons2025 {
-                top: 0;
+                top: calc(-67vw / 1.689 * 0.045);
                 width: 67vw;
             }
             .frog-container {
